grammar.js
    source_file: ($) => repeat($._declaration),
    comment: ($) =>
      token(
        prec(
          1,
          choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))
        )
      ),
    _declaration: ($) =>
      choice(
        $.constantDeclaration,
        $.externDeclaration,
        $._typeDeclaration,
        $.parserDeclaration,
        $.controlDeclaration,
        $.preproc_include,
        $.instantiation,
        $.errorDeclaration,
        $.matchKindDeclaration,
        $.functionDeclaration
      ),
    functionDeclaration: ($) => seq($.functionPrototype, $.blockStatement),
    functionPrototype: ($) =>
      seq(
        $.typeOrVoid,
        $._name,
        optional($.typeParameters),
        "(",
        $.parameterList,
        ")"
      ),
    typeOrVoid: ($) => choice($._typeRef, "void", $.IDENTIFIER),
    constantDeclaration: ($) =>
      seq(
        "const",
        field("type", $._typeRef),
        field("name", $._name),
        "=",
        field("initializer", $.initializer),
        ";"
      ),
    headerTypeDeclaration: ($) =>
      seq(
        "header",
        field("name", $._name),
        "{",
        optional(field("structFields", repeat($.structField))),
        "}"
      ),
    structTypeDeclaration: ($) =>
      seq(
        "struct",
        field("name", $._name),
        "{",
        optional(field("structFields", repeat($.structField))),
        "}"
      ),
    controlDeclaration: ($) =>
      seq(
        "control",
        field("name", $._name),
        "(",
        field("parameterList", $.parameterList),
        ")",
        "{",
        field(
          "localDeclarations",
          optional(repeat($._controlLocalDeclaration))
        ),
        "apply",
        field("applyBlock", $.blockStatement),
        "}"
      ),
    blockStatement: ($) =>
      seq("{", optional(repeat($._statementOrDeclaration)), "}"),
    _statementOrDeclaration: ($) =>
      choice(
        $.constantDeclaration,
        $._statement,
        $.variableDeclaration,
        $.instantiation
      ),
    methodCallStatement: ($) =>
      seq(
        field("methodName", $.lvalue),
        "(",
        optional($.argumentList),
        ")",
        ";"
      ),
    assignmentStatement: ($) =>
      seq(field("lhs", $.lvalue), "=", field("rhs", $._expression), ";"),
    _controlLocalDeclaration: ($) =>
      choice(
        $.constantDeclaration,
        $.actionDeclaration,
        $.tableDeclaration,
        $.instantiation,
        $.variableDeclaration
      ),
    actionDeclaration: ($) =>
      seq(
        "action",
        field("name", $._name),
        "(",
        field("parameterList", optional($.parameterList)),
        ")",
        field("actionBlock", $.blockStatement)
      ),
    tableDeclaration: ($) =>
      seq("table", $._name, "{", optional(repeat($.tableProperty)), "}"),
    tableProperty: ($) =>
      choice(
        seq("key", "=", "{", optional(repeat($.keyElement)), "}"),
        seq("actions", "=", "{", optional(repeat($.actionListElement)), "}"),
        seq($.nonTableKwName, "=", $.initializer, ";"),
        seq("const", $.nonTableKwName, "=", $.initializer, ";"),
        seq("const", "entries", "=", "{", repeat($.entry), "}")
      ),
    nonTableKwName: ($) => choice($.IDENTIFIER, "apply", "state", "type"),
    keyElement: ($) => seq($._expression, ":", $._name, ";"),
    prefixedNonType: ($) => choice($.IDENTIFIER, seq(".", $.IDENTIFIER)),
    argumentList: ($) =>
      seq($.argument, optional(repeat(seq(",", $.argument)))),
    actionListElement: ($) =>
      choice(
        seq($.prefixedNonType, ";"),
        seq($.prefixedNonType, "(", optional($.argumentList), ")", ";")
      ),
    argument: ($) =>
      choice($._expression, seq($._name, "=", $._expression), "dontcare"),
    parserDeclaration: ($) =>
      seq(
        $.parserTypeDeclaration,
        "{",
        repeat($.parserLocalElement),
        repeat($.parserState),
        "}"
      ),
    parserTypeDeclaration: ($) =>
      seq("parser", $._name, "(", optional($.parameterList), ")"),
    parserState: ($) =>
      seq(
        "state",
        $._name,
        "{",
        optional(repeat($.parserStatement)),
        optional($.stateExpression),
        "}"
      ),
    stateExpression: ($) =>
      seq("transition", choice(seq($._name, ";"), $.selectExpression)),
    parameterList: ($) =>
      seq($.parameter, optional(repeat(seq(",", $.parameter)))),
    parameter: ($) =>
      seq(
        optional(choice("inout", "out", "in")),
        field("typeRef", $._typeRef),
        field("name", $._name)
      ),
    typedefDeclaration: ($) =>
      seq("typedef", $._typeRef, field("name", $._name), ";"),
    structField: ($) =>
      seq(field("typeRef", $._typeRef), field("name", $._name), ";"),
    prefixedType: ($) => choice($.IDENTIFIER, seq(".", $.IDENTIFIER)),
    _typeRef: ($) =>
      choice(
        $.baseType,
        $.typeName,
        $.specializedType,
        $.headerStackType,
        $.tupleType
      ),
    baseType: ($) =>
      choice(
        "bit",
        "bool",
        "error",
        "int",
        seq("bit", "<", $.IDENTIFIER, ">"), // added to parse c-style #define BLOOM_FILTER_ENTRIES 4096
        seq("int", "<", $.IDENTIFIER, ">"), // added to parse c-style #define BLOOM_FILTER_ENTRIES 4096
        seq("varbit", "<", $.IDENTIFIER, ">"), // added to parse c-style #define BLOOM_FILTER_ENTRIES 4096
        $.bitWithIntegerWidth,
        seq("int", "<", $.INTEGER, ">"),
        seq("varbit", "<", $.INTEGER, ">"),
        seq("bit", "<", "(", $._expression, ")", ">"),
        seq("int", "<", "(", $._expression, ")", ">"),
        seq("varbit", "<", "(", $._expression, ")", ">")
      ),
    bitWithIntegerWidth: ($) => seq("bit", "<", field("width", $.INTEGER), ">"),
    initializer: ($) => $._expression,
    _expression: ($) =>
      choice(
        $.IDENTIFIER,
        $.TRUE,
        $.FALSE,
        $.INTEGER,
        seq(".", $.IDENTIFIER),
        seq($.IDENTIFIER, ".", $.IDENTIFIER),
        seq($._expression, "[", $._expression, "]"),
        seq("{", optional($.expressionList), "}"),
        seq($._expression, "[", $._expression, ":", $._expression, "]"),
        seq(
          $._expression,
          "<",
          $.realTypeArgumentList,
          ">",
          "(",
          optional($.argumentList),
          ")"
        ),
        seq("(", $._expression, ")"),
        prec.right(seq("!", $._expression)),
        prec.right(seq("~", $._expression)),
        prec.right(seq("-", $._expression)),
        prec.right(seq("+", $._expression)),
        prec.left(2, seq($._expression, ".", $._name)),
        prec.left(1, seq($.IDENTIFIER, ".", $.IDENTIFIER)),
        prec.left(2, seq($._expression, "(", optional($.argumentList), ")")),
        prec.left(
          3,
          alias(
            seq($._expression, "*", $._expression),
            $.MultiplicationExpression
          )
        ),
        prec.left(
          3,
          alias(seq($._expression, "/", $._expression), $.DivisionExpression)
        ),
        prec.left(
          3,
          alias(seq($._expression, "%", $._expression), $.RemainderExpression)
        ),
        prec.left(
          4,
          alias(seq($._expression, "+", $._expression), $.AdditionExpression)
        ),
        prec.left(4, seq($._expression, "-", $._expression)),
        prec.left(
          6,
          alias(seq($._expression, "<", $._expression), $.LessThanExpression)
        ),
        prec.left(
          6,
          alias(seq($._expression, ">", $._expression), $.GreaterThanExpression)
        ),
        prec.left(
          6,
          alias(
            seq($._expression, ">=", $._expression),
            $.GreaterThanOrEqualExpression
          )
        ),
        prec.left(
          6,
          alias(
            seq($._expression, "<=", $._expression),
            $.LessThanOrEqualExpression
          )
        ),
        prec.left(4, seq($._expression, "|+|", $._expression)),
        prec.left(4, seq($._expression, "|-|", $._expression)),
        prec.left(5, seq($._expression, "<<", $._expression)),
        prec.left(5, seq($._expression, ">>", $._expression)),
        prec.left(7, seq($._expression, "!=", $._expression)),
        prec.left(7, seq($._expression, "==", $._expression)),
        prec.left(8, seq($._expression, "&", $._expression)),
        prec.left(9, seq($._expression, "^", $._expression)),
        prec.left(10, seq($._expression, "|", $._expression)),
        prec.left(1, seq($._expression, "++", $._expression)),
        prec.left(11, seq($._expression, "&&", $._expression)),
        prec.left(12, seq($._expression, "||", $._expression)),
        prec.left(
          13,
          seq($._expression, "?", $._expression, ":", $._expression)
        ),
        prec.left(seq("(", $._typeRef, ")", $._expression))
      ),
    typeName: ($) => $.prefixedType,
    _name: ($) => $.IDENTIFIER,
    lvalue: ($) =>
      choice(
        $.prefixedNonType,
        $.propertyAccessExpression,
        alias(
          seq($.lvalue, "[", $._expression, "]"),
          $.bracketAccessExpression
        ),
        alias(
          seq($.lvalue, "[", $._expression, ":", $._expression, "]"),
          $.bracketColonExpression
        )
      ),
    propertyAccessExpression: ($) => seq($.lvalue, ".", $._name),
