corpus/VariableDeclarations.txt
================================================================================
header
================================================================================

header ipv4_t {
    bit<4>    version;
    bit<4>    ihl;
    bit<8>    diffserv;
    bit<16>   totalLen;
    bit<16>   identification;
    bit<3>    flags;
    bit<13>   fragOffset;
    bit<8>    ttl;
    bit<8>    protocol;
    bit<16>   hdrChecksum;
    ip4Addr_t srcAddr;
    ip4Addr_t dstAddr;
}

--------------------------------------------------------------------------------

(source_file
  (headerTypeDeclaration
    (IDENTIFIER)
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (baseType
        (bitWithIntegerWidth
          (INTEGER)))
      (IDENTIFIER))
    (structField
      (typeName
        (prefixedType
          (IDENTIFIER)))
      (IDENTIFIER))
    (structField
      (typeName
        (prefixedType
          (IDENTIFIER)))
      (IDENTIFIER))))

================================================================================
struct
================================================================================

struct headers {
    ethernet_t   ethernet;
    ipv4_t       ipv4;
}

--------------------------------------------------------------------------------

(source_file
  (structTypeDeclaration
    (IDENTIFIER)
    (structField
      (typeName
        (prefixedType
          (IDENTIFIER)))
      (IDENTIFIER))
    (structField
      (typeName
        (prefixedType
          (IDENTIFIER)))
      (IDENTIFIER))))

================================================================================
constant declarations
================================================================================

const bit<16> TYPE_IPV4 = 0x800;
const bit<16> TYPE_SRCROUTING = 0x1234;

--------------------------------------------------------------------------------

(source_file
  (constantDeclaration
    (baseType
      (bitWithIntegerWidth
        (INTEGER)))
    (IDENTIFIER)
    (initializer
      (INTEGER)))
  (constantDeclaration
    (baseType
      (bitWithIntegerWidth
        (INTEGER)))
    (IDENTIFIER)
    (initializer
      (INTEGER))))
